Added PovRay preset / Updated quantitative overlap factor